# PhotoPie

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  README.md  README.rst  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
tests/: test_photopie.py
