[tool.poetry]
name = "photopie"
version = "0.1.0"
description = ""
license = "LGPL-3.0+"
authors = ["Ioannis Valasakis <code@wizofe.uk>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
