[tool.poetry]
name = "photopie"
version = "0.1.0"
description = "PhotoPie is the missing Python API for Adobe Photoshop(R)"
authors = ["Ioannis Valasakis <code@wizofe.uk>"]

license = "MPL-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-cov = "^2.7"
tox = "^3.11"
pre-commit = "^1.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
